// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.js - flow-verify 1`] = `
try {
} catch (e) {
}
finally {
}

try {
} catch (e) {
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
} catch (e) {
} finally {
}

try {
} catch (e) {}

`;

exports[`try.js - flow-verify 1`] = `
try
/* missing comment */
{;}
finally {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
try {
  /* missing comment */
} finally {
}

`;
